--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <title>Domain Verification Dogfood</title>
-
+<meta name="facebook-domain-verification" content="jyqbeygopmiv67r6975o9y8ezz2601" />
 </head>
 
 
